--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*{
+    margin: 0;
+}
 body{
     font-family: "Poppins", sans-serif;
+}
+
+.logo{
+    margin-top: 30px;
 }
 .logo-img {
     width: 150px;
     height:60px;
+}
+
+.container{
+    max-width: 1280px;
+    margin: 0 auto;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    height: 72px;
+    align-items: center;
+}
+
+ul{
+   display: flex;
+   list-style: none;
+   gap: 24px;
+}
+button{
+    all: unset;
+    background-color: red;
+    color: white;
+    height: 28px;
+    padding: 6px 16px;
+    border-radius: 5px;
+    font-weight: 500;
+}
+.hero{
+    display: flex;
+    align-items: center;
+    height: calc(100vh-72px);
+}
+.hero-image{
+    height: 600px;
+}
+
+.hero h1{
+    font-weight: 800;
+    font-size: 100px;
+    line-height: 102px;
+}
+.hero p{
+    font-weight: 600;
+    color: rgb(83, 82, 82);
+    max-width: 700px;
+}
+
+.hero-btn{
+    display: flex;
+    gap: 40px;
+}
+
+.hero-content{
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
 }
